force-app/main/default/objects/Advertising_Contract__c/Advertising_Contract__c.object-meta.xml
<CustomObject>
    <description>Binding advertising contract generated from an approved Advertising Opportunity. Captures signatory details, contract terms, cancellation policy, make-good provisions, and e-signature status.</description>
    <label>Advertising Contract</label>
    <nameField>
        <displayFormat>CNT-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertising Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>