force-app/main/default/objects/Advertising_Contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertising Contracts</relationshipLabel>
    <relationshipName>Advertising_Contracts_Account</relationshipName>
    <type>Lookup</type>
</CustomField>