force-app/main/default/objects/Advertising_Contract__c/fields/Advertising_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Opportunity__c</fullName>
    <label>Advertising Opportunity</label>
    <referenceTo>Advertising_Opportunity__c</referenceTo>
    <relationshipLabel>Advertising Contracts</relationshipLabel>
    <relationshipName>Advertising_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>