force-app/main/default/objects/Advertising_Contract__c/fields/Agency_Account__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertising Contracts (Agency)</relationshipLabel>
    <relationshipName>Advertising_Contracts_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>