force-app/main/default/objects/Advertising_Contract__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Advertising Contracts (Approved By)</relationshipLabel>
    <relationshipName>Advertising_Contracts_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>