force-app/main/default/objects/Advertising_Contract__c/fields/Cancellation_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Amount__c</fullName>
    <label>Cancellation Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>