force-app/main/default/objects/Advertising_Contract__c/fields/Cancellation_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Percent__c</fullName>
    <label>Cancellation Fee Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>