force-app/main/default/objects/Advertising_Contract__c/fields/Cancellation_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notice_Days__c</fullName>
    <label>Cancellation Notice Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>