force-app/main/default/objects/Advertising_Contract__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <label>Cancellation Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard 30-Day</fullName>
                <default>true</default>
                <label>Standard 30-Day Notice</label>
            </value>
            <value>
                <fullName>Standard 60-Day</fullName>
                <label>Standard 60-Day Notice</label>
            </value>
            <value>
                <fullName>Non-Cancellable</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <label>Custom Terms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>