force-app/main/default/objects/Advertising_Contract__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation / Make-Good Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>