force-app/main/default/objects/Advertising_Contract__c/fields/Cancellation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date__c</fullName>
    <label>Cancellation Request Date</label>
    <type>Date</type>
</CustomField>