force-app/main/default/objects/Advertising_Contract__c/fields/Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms__c</fullName>
    <label>Contract Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>