force-app/main/default/objects/Advertising_Contract__c/fields/E_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_Date__c</fullName>
    <label>E-Signature Date</label>
    <type>DateTime</type>
</CustomField>