force-app/main/default/objects/Advertising_Contract__c/fields/E_Signature_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_Document_URL__c</fullName>
    <label>E-Signature Document URL</label>
    <type>Url</type>
</CustomField>