force-app/main/default/objects/Advertising_Contract__c/fields/Last_Traffic_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Last_Traffic_Transmission__c</fullName>
    <description>Timestamp of the most recent attempt to transmit this order to the traffic system, whether successful or not.</description>
    <label>Last Traffic Transmission</label>
    <type>DateTime</type>
</CustomField>