force-app/main/default/objects/Advertising_Contract__c/fields/Make_Good_Credits__c.field-meta.xml
<CustomField>
    <fullName>Make_Good_Credits__c</fullName>
    <label>Make-Good Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>