force-app/main/default/objects/Advertising_Contract__c/fields/Make_Good_Policy__c.field-meta.xml
<CustomField>
    <fullName>Make_Good_Policy__c</fullName>
    <label>Make-Good Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>