force-app/main/default/objects/Advertising_Contract__c/fields/Traffic_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Error_Message__c</fullName>
    <description>Error details from the most recent failed transmission attempt or rejection callback. Cleared on successful transmission.</description>
    <label>Traffic Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>