force-app/main/default/objects/Advertising_Contract__c/fields/Traffic_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Order_ID__c</fullName>
    <description>The order ID assigned by the traffic/scheduling system after successful transmission. Used to correlate inbound callbacks and make-good notifications back to this contract.</description>
    <externalId>true</externalId>
    <label>Traffic Order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>