force-app/main/default/objects/Advertising_Contract__c/fields/Traffic_Status__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Status__c</fullName>
    <description>Current transmission status of this contract with the traffic/scheduling system. Updated automatically when the contract is sent and when the traffic system sends a callback.</description>
    <label>Traffic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Make-Good Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>